2011-10-27 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-event-list-popup.c
    * src/gtk-sat-list-popup.c
    * src/gtk-sat-map-popup.c
    * src/gtk-polar-view-popup.c
    * src/gtk-sat-popup-common.c
    * src/gtk-sat-popup-common.h
    * src/gtk-single-sat.c
    * src/Makefile.am
    Consolidate popup callback functions into single function and file.	


2011-10-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Read .sat files only when there is data to compare.

    * src/tle-update.c
    Restructure satellite name test and add "OBJECT A" name type to list for replacement.


2011-10-23 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map-groundtrack.c
    Use more robust check on orbit change time.

    * src/gtk-rig-ctrl.c
    * src/sat-debugger.c
    * src/sat-pref.c
    * src/sat-log-browser.c
    * src/mod-cfg.c
    * src/loc-tree.c
    Eliminate calls to deprecated gtk_box_pack_start_defaults.

    * src/mod-cfg-get-param.c
    * src/mod-cfg-get-param.h
    * src/gtk-sat-map.c
    * src/gtk-polar-view.c
    Migrate satellite map and polar view to single mod-cfg functions for getting lists of integers.

    * data/trsp/37839.trsp
    * data/trsp/5580.trsp
    Add transponder data for Prospero and SRMVU satellites.

    * src/gtk-sat-module.c
    Replace part of satellite update with call to predict_calc.


2011-10-13 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/qth-data.c
    * src/save-pass.c
    * src/gtk-polar-view-popup.c
    Eliminate unused variables to clean compiler output.

    * ChangeLog
    * src/sat-log-browser.c
    Add currently shown file name in title.

2011-10-12 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-list.c
    * src/gtk-sat-list.h
    Filter decayed satellites from satellite list. (Bug 3414666)

    * ChangeLog
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    Filter decayed satellites from event list. (Bug 3414666)

