@@ -32,7 +32,8 @@
 #ifdef __cplusplus
 extern "C" {
 #endif /* __cplusplus */
-
+void add_pass_menu_items (GtkWidget *menu, sat_t *sat, qth_t *qth, gdouble *tstamp, GtkWidget *widget);
+void show_current_pass_cb       (GtkWidget *menuitem, gpointer data);
 void show_next_pass_cb       (GtkWidget *menuitem, gpointer data);
 void show_future_passes_cb       (GtkWidget *menuitem, gpointer data);
 void show_next_pass_dialog       (sat_t *sat, qth_t *qth, gdouble tstamp, GtkWindow *toplevel);
